--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <plugins>
     <plugin>
       <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
+      <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>3.1.0</version>
       <configuration>
@@ -42,7 +42,14 @@
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
             <mainClass>org.example.Main</mainClass>
+            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
           </manifest>
+          <manifestEntries>
+<!--              <Premain-Class>org.example.customagent.ListLoadedClassesAgent</Premain-Class>-->
+            <!--              <Can-Redefine-Classes>false</Can-Redefine-Classes>-->
+            <!--              <Can-Retransform-Classes>true</Can-Retransform-Classes>-->
+            </manifestEntries>
         </archive>
       </configuration>
     </plugin>
