--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>31.1-jre</version>
+</dependency>
     </dependencies>
 
     <build>
