--- a/pom.xml
+++ b/pom.xml
@@ -31,33 +31,41 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>31.1-jre</version>
-</dependency>
+        </dependency>
+            <dependency>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.4.2</version>
+      </dependency>
     </dependencies>
-
-    <build>
-  <plugins>
-    <plugin>
-      <!-- Build an executable JAR -->
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>3.1.0</version>
-      <configuration>
-        <archive>
-          <manifest>
-            <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>org.example.Main</mainClass>
-            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-          </manifest>
-          <manifestEntries>
-<!--              <Premain-Class>org.example.customagent.ListLoadedClassesAgent</Premain-Class>-->
-            <!--              <Can-Redefine-Classes>false</Can-Redefine-Classes>-->
-            <!--              <Can-Retransform-Classes>true</Can-Retransform-Classes>-->
-            </manifestEntries>
-        </archive>
-      </configuration>
-    </plugin>
-  </plugins>
+  <build>
+   <pluginManagement>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+               <archive>
+                  <manifest>
+                     <addClasspath>true</addClasspath>
+                     <mainClass>org.example.Main</mainClass>
+                  </manifest>
+               </archive>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+            </configuration>
+            <executions>
+               <execution>
+                  <id>make-my-jar-with-dependencies</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>single</goal>
+                  </goals>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </pluginManagement>
 </build>
 </project>
